--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "docs:stars": "node docs/.vitepress/utils/updateStars.mjs"
+  },
+  "dependencies": {
+    "axios": "^1.6.2",
+    "cheerio": "^1.0.0-rc.12",
+    "moment": "^2.29.4"
   }
 }
