--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
-    "docs:stars": "node docs/.vitepress/utils/updateStars.mjs"
+    "docs:stars": "node docs/.vitepress/utils/updateStars.mjs",
+    "docs:send": "node docs/.vitepress/utils/sendWechat.mjs"
   },
   "dependencies": {
     "axios": "^1.6.2",
