--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ on:
   workflow_dispatch:
 
   schedule:
-    - cron: '10 2 * * *'
+    - cron: '10 1 * * *'
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -56,6 +56,10 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           path: docs/.vitepress/dist
+      - name: Send Notification
+        run: yarn docs:sendbark
+        env: 
+          BARK_URL: ${{ secrets.BARK_URL }}
 
   # Deployment job
   deploy:
