--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
-    "docs:stars": "node docs/.vitepress/utils/updateStars.mjs"
+    "docs:stars": "node docs/.vitepress/utils/updateStars.mjs",
+    "docs:sendbark": "node docs/.vitepress/utils/sendBark.mjs",
+    "docs:sendemail": "node docs/.vitepress/utils/sendEmail.mjs"
   },
   "dependencies": {
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "nodemailer": "^6.9.7"
   }
 }
