--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,10 +56,10 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           path: docs/.vitepress/dist
-      - name: Send Notification
-        run: yarn docs:sendbark
-        env: 
-          BARK_URL: ${{ secrets.BARK_URL }}
+      # - name: Send Notification
+      #   run: yarn docs:sendbark
+      #   env: 
+      #     BARK_URL: ${{ secrets.BARK_URL }}
 
   # Deployment job
   deploy:
